entity_macros/tests/ui/attribute/unsupported-unit-struct.stderr
error: Unsupported shape `unit`
 --> $DIR/unsupported-unit-struct.rs:3:1
  |
3 | #[simple_ent]
  | ^^^^^^^^^^^^^
  |
  = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)
